--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -3,21 +3,16 @@ name: Docker Image CI
 on:
   push:
     branches: [ master ]
-  pull_request:
-    branches: [ master ]
-
+    
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: | 
         export con_name=xyzzpwn/hexo:$(date +%Y%m%d%H%M%S)
-        docker build . --file Dockerfile --tag $con_name
+        docker build . --file ./Dockerfile --tag $con_name
         docker login -u={{ secert.DOCKER_USERNAME }} -p=${{ secrets.DOCKER_PASSWORD }}
         docker push $con_name
         
