--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -11,8 +11,8 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: | 
+        echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secert.DOCKER_USERNAME }} --password-stdin
         export con_name=xyzzpwn/hexo:$(date +%Y%m%d%H%M%S)
         docker build . --file ./Dockerfile --tag $con_name
-        docker login -u={{ secert.DOCKER_USERNAME }} -p=${{ secrets.DOCKER_PASSWORD }}
         docker push $con_name
         
