--- a/Dockerfile_cn
+++ b/Dockerfile_cn
@@ -1,14 +1,10 @@
-FROM ubuntu:latest
+FROM node:latest
 ENV DEBIAN_FRONTEND=noninteractive
 RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     echo 'Asia/Shanghai' >/etc/timezone && \
     set -xe && \
-    sed -i 's/archive.ubuntu.com/mirrors.aliyun.com/g' /etc/apt/sources.list && \
-    sed -i 's/security.ubuntu.com/mirrors.aliyun.com/g' /etc/apt/sources.list && \
-    apt-get update  --fix-missing&& \
-    apt-get install -y git nodejs npm    && \
-    apt-get clean     && \
-    rm -fr /var/lib/apt/lists/* && \
+    sed -i 's/deb.debian.org/mirrors.aliyun.com/g' /etc/apt/sources.list && \
+    sed -i 's/security.debian.org/mirrors.aliyun.com/g' /etc/apt/sources.list && \
     npm config set registry https://registry.npm.taobao.org && \
     npm install -g hexo-cli
 ENV LC_ALL=C.UTF-8
