--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -11,15 +11,18 @@ jobs:
   build:
     runs-on: ubuntu-latest
     steps:
+      env:
+        con_name: xyzzpwn/sage 
+        Dockerfile: ./hexo/Dockerfile
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: |
+        pwd
         sudo ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime;
         echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
-        export con_name=xyzzpwn/hexo
         export con_time_name=$con_name:$(date +%Y%m%d%H%M%S)
         export con_relese_name=$con_name:latest
-        docker build . --file ./Dockerfile --tag $con_time_name
+        docker build . --file $Dockerfile --tag $con_time_name
         docker push $con_time_name
         docker tag $con_time_name $con_relese_name
         docker push $con_relese_name
