--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -10,19 +10,19 @@ on:
 jobs:
   build:
     runs-on: ubuntu-latest
-    steps:
-      env:
-        con_name: xyzzpwn/sage 
-        Dockerfile: ./hexo/Dockerfile
+    steps:   
     - uses: actions/checkout@v2
     - name: Build the Docker image
+      env:
+        con_name: xyzzpwn/sage 
+        Docker_file: hexo/Dockerfile
       run: |
         pwd
         sudo ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime;
         echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
         export con_time_name=$con_name:$(date +%Y%m%d%H%M%S)
         export con_relese_name=$con_name:latest
-        docker build . --file $Dockerfile --tag $con_time_name
+        docker build . --file $Docker_file --tag $con_time_name
         docker push $con_time_name
         docker tag $con_time_name $con_relese_name
         docker push $con_relese_name
