--- a/.github/workflows/hexo.yml
+++ b/.github/workflows/hexo.yml
@@ -14,7 +14,7 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       env:
-        con_name: xyzzpwn/sage 
+        con_name: xyzzpwn/hexo 
         Docker_file: hexo/Dockerfile
       run: |
         pwd
