--- a/.github/workflows/nginx_proxy.yml
+++ b/.github/workflows/nginx_proxy.yml
@@ -17,6 +17,7 @@ jobs:
         con_name: xyzzpwn/nginx_proxy 
         Docker_file: nginx_proxy/Dockerfile
       run: |
+        cd nginx_proxy
         pwd
         sudo ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime;
         echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
