--- a/.github/workflows/nginx_proxy.yml
+++ b/.github/workflows/nginx_proxy.yml
@@ -23,7 +23,7 @@ jobs:
         echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
         export con_time_name=$con_name:$(date +%Y%m%d%H%M%S)
         export con_relese_name=$con_name:latest
-        docker build . --file $Docker_file --tag $con_time_name
+        docker build . --tag $con_time_name
         docker push $con_time_name
         docker tag $con_time_name $con_relese_name
         docker push $con_relese_name
