--- a/.github/workflows/sage.yml
+++ b/.github/workflows/sage.yml
@@ -15,14 +15,15 @@ jobs:
     - name: Build the Docker image
       env:
         con_name: xyzzpwn/sage 
-        Docker_file: sage/Dockerfile
+        Docker_file_dir: sage
       run: |
+        cd $Docker_file_dir
         pwd
         sudo ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime;
         echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
         export con_time_name=$con_name:$(date +%Y%m%d%H%M%S)
         export con_relese_name=$con_name:latest
-        docker build . --file $Docker_file --tag $con_time_name
+        docker build . --tag $con_time_name
         docker push $con_time_name
         docker tag $con_time_name $con_relese_name
         docker push $con_relese_name
