--- a/privoxy_proxy/Dockerfile
+++ b/privoxy_proxy/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine:latest
 RUN set -xe && \
     apk update && \
-    apk add -y privoxy
+    apk add privoxy
 ENV LC_ALL=C.UTF-8
 ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US:en
