--- a/python_spider/Dockerfile
+++ b/python_spider/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:latest
+FROM python:alpine
 ENV DEBIAN_FRONTEND=noninteractive
 RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     echo "Asia/Shanghai" >/etc/timezone && \
