--- a/python_video/Dockerfile
+++ b/python_video/Dockerfile
@@ -1,3 +1,6 @@
 FROM xyzzpwn/python_flask
 
+
 copy ./web /web
+copy https://www.layuicdn.com/layui/css/layui.css /web/static/layui.css
+copy https://www.layuicdn.com/auto/layui.js /web/static/layui.js
