--- a/python_video/Dockerfile
+++ b/python_video/Dockerfile
@@ -2,5 +2,5 @@ FROM xyzzpwn/python_flask
 
 
 copy ./web /web
-copy https://www.layuicdn.com/layui/css/layui.css /web/static/layui.css
-copy https://www.layuicdn.com/auto/layui.js /web/static/layui.js
+ADD https://www.layuicdn.com/layui/css/layui.css /web/static/layui.css
+ADD https://www.layuicdn.com/auto/layui.js /web/static/layui.js
