--- a/python_video/Dockerfile
+++ b/python_video/Dockerfile
@@ -2,5 +2,7 @@ FROM xyzzpwn/python_flask
 
 
 copy ./web /web
-ADD https://www.layuicdn.com/layui/css/layui.css /web/static/layui.css
-ADD https://www.layuicdn.com/auto/layui.js /web/static/layui.js
+RUN curl -L $(curl -L https://api.github.com/repos/sentsin/layui/tags |grep zipball_url |head -n 1 | awk -F '": "' '{print $2}'|cut -d '"' -f 1) -o layui.zip && \
+unzip layui.zip && \
+cp -r layui-layui-*/src/* /web/static/
+
