--- a/.github/workflows/all_jobs.yml
+++ b/.github/workflows/all_jobs.yml
@@ -5,7 +5,7 @@ on:
     branches: [ master ]
     paths: ['code_server/*','.github/workflows/code_server.yml']
   schedule:
-    - cron: '00 11 * * 4'
+    - cron: '05 * * * *'
 
 jobs:    
   code_server:
