--- a/pwn_227/Dockerfile
+++ b/pwn_227/Dockerfile
@@ -9,7 +9,8 @@ RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     apt-get install -y sudo wget cmake openssh-server net-tools autojump lib32z1 libc6:i386 zsh gdb tmux vim curl git socat htop libgmp-dev libmpfr-dev libmpc-dev build-essential gcc g++ python python3 python-dev python3-dev python-pip python3-pip && \
 #    git clone https://github.com/pwndbg/pwndbg && cd pwndbg && ./setup.sh && \
     echo c2V0IC1nIG1vdXNlIG9uOw==|base64 -d > ~/.tmux.conf && \
-    python3 -m pip install --upgrade pip && \
+    python3 -m pip install --upgrade pip==20.3.4 && \
+    python -m pip install --upgrade pip==20.3.4 && \
     python3 -m pip install --no-cache-dir pwntools gmpy2 z3-solver numpy setuptools_rust && \
     python -m pip install --no-cache-dir gmpy2 z3-solver numpy && \
     sh -c "$(wget -O- https://raw.githubusercontent.com/chnxyzz/oh-my-zsh/master/tools/install.sh)" && \
