--- a/.github/workflows/all_jobs.yml
+++ b/.github/workflows/all_jobs.yml
@@ -3,9 +3,19 @@ name: all_jobs
 on:
   push:
     branches: [ master ]
-    paths: ['*','.github/workflows/all_jobs.yml']
+    paths: ['*/Dockerfile','.github/workflows/all_jobs.yml']
   schedule:
     - cron: '50 0 * * 0'
+
+  # 手动触发事件
+  workflow_dispatch:
+    inputs:
+      logLevel:
+        description: 'Log level'
+        required: true
+        default: 'warning'
+      tags:
+        description: 'all_jobs'
 
 jobs:    
   code_server:
