--- a/python_spider/Dockerfile
+++ b/python_spider/Dockerfile
@@ -3,7 +3,7 @@ ENV DEBIAN_FRONTEND=noninteractive
 RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
     echo "Asia/Shanghai" >/etc/timezone && \
     set -xe && \
-    python -m pip install --no-cache-dir beautifulsoup4 pyparser lxml requests python-dateutil html5lib
+    python -m pip install --no-cache-dir beautifulsoup4 pyparser lxml requests python-dateutil html5lib pandas
 ENV LC_ALL=C.UTF-8
 ENV LANG=en_US.UTF-8
 ENV LANGUAGE=en_US:en
