--- a/code_server/Dockerfile
+++ b/code_server/Dockerfile
@@ -41,10 +41,10 @@ RUN chmod +w /etc/sudoers && \
 COPY ./init_conda.sh /init_conda.sh
 RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh && \
     bash ./Miniconda3-latest-Linux-x86_64.sh -b -p /root/miniconda && \
-    ~/miniconda/bin/conda init $(echo $SHELL | awk -F '/' '{print $NF}') && \
+    /root/miniconda/bin/conda init $(echo $SHELL | awk -F '/' '{print $NF}') && \
     echo 'Successfully installed miniconda...' && \
     echo -n 'Conda version: ' && \
-    ~/miniconda/bin/conda --version && \
+    /root/miniconda/bin/conda --version && \
     echo -e '\n' && \
     tail -n 16 ~/.bashrc >> ~/.zshrc && \
     /root/miniconda/bin/conda config --set auto_activate_base false && \
