--- a/code_server/Dockerfile
+++ b/code_server/Dockerfile
@@ -11,36 +11,29 @@ ENV PUID=1000
 ENV PGID=1000
 ENV TZ=Asia/Shanghai
 
-RUN sed -i 's;://\([^/]*\)/;://mirrors.ustc.edu.cn/;' /etc/apt/sources.list /etc/apt/sources.list.d/parrot.list /etc/apk/repositories; apt-get update
-RUN ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
-    echo "Asia/Shanghai" >/etc/timezone && \
-    set -xe && \
-    apt-get install -y gcc g++ python3 wget curl zsh autojump git htop python3-pip vim
 COPY settings.json /config/data/User/settings.json
 COPY argv.json /config/data/User/argv.json
 COPY languagepacks.json /config/data/languagepacks.json
 COPY clp /config/data/clp
+COPY ./init_conda.sh /init_conda.sh
+COPY ./bash.rc /root/.bashrc
 
-RUN git clone https://github.com/chnxyzz/oh-my-zsh.git /config/.oh-my-zsh 
-RUN mkdir -p /config/.config && chown -R abc:abc /config/.config && \
+RUN sed -i 's;://\([^/]*\)/;://mirrors.ustc.edu.cn/;' /etc/apt/sources.list /etc/apt/sources.list.d/parrot.list /etc/apk/repositories; apt-get update && \
+    ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime && \
+    echo "Asia/Shanghai" >/etc/timezone && \
+    set -xe && \
+    apt-get install -y gcc g++ python3 wget curl zsh autojump git htop python3-pip vim && \
+    git clone https://github.com/chnxyzz/oh-my-zsh.git /config/.oh-my-zsh && \
+    mkdir -p /config/.config && chown -R abc:abc /config/.config && \
     mkdir -p /config/extensions && chown -R abc:abc /config/extensions && \
     mkdir -p /config/.local && chown -R abc:abc /config/.local && \
     chown -R abc:abc /config/.oh-my-zsh  && \ 
     mkdir -p /config/data/User && chown -R abc:abc /config/data && \
-    cp /config/.oh-my-zsh/templates/zshrc.zsh-template /config/.zshrc 
-RUN chmod +w /etc/sudoers && \
+    cp /config/.oh-my-zsh/templates/zshrc.zsh-template /config/.zshrc && \
+    chmod +w /etc/sudoers && \
     echo "abc ALL=(ALL:ALL) NOPASSWD:ALL" >> /etc/sudoers && \
-    chmod -w /etc/sudoers 
-# RUN chown -R abc:abc /config 
-# RUN mkdir -p /config/data/User \
-    # chown -R root:root .bash_history && \
-    # chown -R root:root custom-cont-init.d && \
-    # chown -R root:root custom-services.d 
-
-# 安装miniconda
-COPY ./init_conda.sh /init_conda.sh
-COPY ./bash.rc /root/.bashrc
-RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh && \
+    chmod -w /etc/sudoers && \
+    wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh && \
     bash ./Miniconda3-latest-Linux-x86_64.sh -b -p /root/miniconda && \
     /root/miniconda/bin/conda init bash && \
     /root/miniconda/bin/conda init $(echo $SHELL | awk -F '/' '{print $NF}') && \
