--- a/python_video/Dockerfile
+++ b/python_video/Dockerfile
@@ -5,5 +5,6 @@ copy ./web /web
 
 RUN apk add curl unzip && curl -L $(curl -L https://api.github.com/repos/sentsin/layui/tags |grep zipball_url |head -n 1 | awk -F '": "' '{print $2}'|cut -d '"' -f 1) -o layui.zip && \
 unzip layui.zip && \
-cp -r layui-layui-*/src/* /web/static/
+cp -r layui-layui-*/src/* /web/static/ && \
+cp /web/static/css/layui.css /web/static/layui.css
 
