--- a/.github/workflows/all_jobs.yml
+++ b/.github/workflows/all_jobs.yml
@@ -142,46 +142,46 @@ jobs:
           
 
       
-  pwn_223:
-    runs-on: ubuntu-latest
-    steps:   
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      env:
-        con_name: xyzzpwn/pwn_223 
-        Docker_file_dir: pwn_223
-      run: |
-        cd $Docker_file_dir
-        pwd
-        sudo ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime;
-        echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
-        export con_time_name=$con_name:$(date +%Y%m%d%H%M%S)
-        export con_relese_name=$con_name:latest
-        docker build . --tag $con_time_name
-        docker push $con_time_name
-        docker tag $con_time_name $con_relese_name
-        docker push $con_relese_name
+  # pwn_223:
+  #   runs-on: ubuntu-latest
+  #   steps:   
+  #   - uses: actions/checkout@v2
+  #   - name: Build the Docker image
+  #     env:
+  #       con_name: xyzzpwn/pwn_223 
+  #       Docker_file_dir: pwn_223
+  #     run: |
+  #       cd $Docker_file_dir
+  #       pwd
+  #       sudo ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime;
+  #       echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
+  #       export con_time_name=$con_name:$(date +%Y%m%d%H%M%S)
+  #       export con_relese_name=$con_name:latest
+  #       docker build . --tag $con_time_name
+  #       docker push $con_time_name
+  #       docker tag $con_time_name $con_relese_name
+  #       docker push $con_relese_name
 
       
-  pwn_227:
-    runs-on: ubuntu-latest
-    steps:   
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      env:
-        con_name: xyzzpwn/pwn_227 
-        Docker_file_dir: pwn_227
-      run: |
-        cd $Docker_file_dir
-        pwd
-        sudo ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime;
-        echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
-        export con_time_name=$con_name:$(date +%Y%m%d%H%M%S)
-        export con_relese_name=$con_name:latest
-        docker build . --tag $con_time_name
-        docker push $con_time_name
-        docker tag $con_time_name $con_relese_name
-        docker push $con_relese_name
+  # pwn_227:
+  #   runs-on: ubuntu-latest
+  #   steps:   
+  #   - uses: actions/checkout@v2
+  #   - name: Build the Docker image
+  #     env:
+  #       con_name: xyzzpwn/pwn_227 
+  #       Docker_file_dir: pwn_227
+  #     run: |
+  #       cd $Docker_file_dir
+  #       pwd
+  #       sudo ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime;
+  #       echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
+  #       export con_time_name=$con_name:$(date +%Y%m%d%H%M%S)
+  #       export con_relese_name=$con_name:latest
+  #       docker build . --tag $con_time_name
+  #       docker push $con_time_name
+  #       docker tag $con_time_name $con_relese_name
+  #       docker push $con_relese_name
 
       
   pwn_231:
