--- a/.github/workflows/all_jobs.yml
+++ b/.github/workflows/all_jobs.yml
@@ -184,25 +184,25 @@ jobs:
   #       docker push $con_relese_name
 
       
-  pwn_231:
-    runs-on: ubuntu-latest
-    steps:   
-    - uses: actions/checkout@v2
-    - name: Build the Docker image
-      env:
-        con_name: xyzzpwn/pwn_231 
-        Docker_file_dir: pwn_231
-      run: |
-        cd $Docker_file_dir
-        pwd
-        sudo ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime;
-        echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
-        export con_time_name=$con_name:$(date +%Y%m%d%H%M%S)
-        export con_relese_name=$con_name:latest
-        docker build . --tag $con_time_name
-        docker push $con_time_name
-        docker tag $con_time_name $con_relese_name
-        docker push $con_relese_name
+  # pwn_231:
+  #   runs-on: ubuntu-latest
+  #   steps:   
+  #   - uses: actions/checkout@v2
+  #   - name: Build the Docker image
+  #     env:
+  #       con_name: xyzzpwn/pwn_231 
+  #       Docker_file_dir: pwn_231
+  #     run: |
+  #       cd $Docker_file_dir
+  #       pwd
+  #       sudo ln -sf /usr/share/zoneinfo/Asia/Shanghai /etc/localtime;
+  #       echo ${{ secrets.DOCKER_PASSWORD }} | docker login --username ${{ secrets.DOCKER_USERNAME }} --password-stdin
+  #       export con_time_name=$con_name:$(date +%Y%m%d%H%M%S)
+  #       export con_relese_name=$con_name:latest
+  #       docker build . --tag $con_time_name
+  #       docker push $con_time_name
+  #       docker tag $con_time_name $con_relese_name
+  #       docker push $con_relese_name
   
   pwn_235:
     runs-on: ubuntu-latest
