--- a/code_server/Dockerfile
+++ b/code_server/Dockerfile
@@ -43,6 +43,8 @@ RUN sed -i 's;://\([^/]*\)/;://mirrors.ustc.edu.cn/;' /etc/apt/sources.list /etc
     /root/miniconda/bin/conda --version && \
     echo -e '\n' && \
     tail -n 16 ~/.bashrc >> ~/.zshrc && \
+    /root/miniconda/bin/conda tos accept --override-channels --channel https://repo.anaconda.com/pkgs/main && \
+    /root/miniconda/bin/conda tos accept --override-channels --channel https://repo.anaconda.com/pkgs/r && \
     /root/miniconda/bin/conda config --set auto_activate_base false && \
     bash /init_conda.sh && \
     /root/miniconda/bin/conda init bash 
