--- a/python_video/Dockerfile
+++ b/python_video/Dockerfile
@@ -2,7 +2,7 @@ FROM xyzzpwn/python_flask
 
 ENV DEBIAN_FRONTEND=noninteractive
 copy ./web /web
-RUN apt-get update -y && apt-get install -y wget curl unzip aria2c ffmpeg 
+RUN apt-get update -y && apt-get install -y wget curl unzip aria2 ffmpeg 
 RUN curl -L $(curl -L https://api.github.com/repos/sentsin/layui/tags |grep zipball_url |head -n 1 | awk -F '": "' '{print $2}'|cut -d '"' -f 1) -o layui.zip && \
 unzip layui.zip && \
 cp -r layui-layui-*/src/* /web/static/ && \
